--- a/index.html
+++ b/index.html
@@ -61,19 +61,20 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-blue-grey w3-center w3-blue-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
     <img src="https://xufengduan.github.io/headshot_new.jpg" alt="Me" class="w3-image w3-padding-32" width="400" height="450">
-    <div class="w3-content w3-justify" style="max-width:600px">
+          <div class="w3-content w3-justify" style="max-width:600px">
 	    
-      <h4>Xufeng Duan</h4>  
-		I am a PhD candidate in the <a href="https://cuhklpl.github.io/">Language Processing Lab</a> at the Department of Linguistics, The Chinese University of Hong Kong (ranked among the top 50 in the QS rankings). I am seeking a RAP/AP position in 2025.  
-		<br></br>  
-		My research focuses on large language models (LLMs) and language production. I use behavioral, EEG, and fMRI data, along with computational methods, to explore the mechanisms of the language system. Additionally, I am trained and licensed in TMS for research purposes in Hong Kong and have completed an internship as a language therapist/researcher specializing in aphasia at the Third Affiliated Hospital of Sun Yat-sen University.  
-		<br></br>
-	    <br></br>
-	    Email: xufeng.duan@link.cuhk.edu.hk<br></br>
-	    <a href="https://scholar.google.com/citations?user=W-MI5XUAAAAJ">Google scholar</a><br></br>
-      <hr class="w3-opacity">
+            <h4>Xufeng Duan</h4>  
+                  I am a Postdoctoral Fellow and Part-time Lecturer in the <a href="https://cuhklpl.github.io/">Language Processing Lab</a> at the Department of Linguistics, The Chinese University of Hong Kong (ranked among the top 50 in the QS rankings). I received my PhD in Linguistics from CUHK, and I am currently seeking a RAP/AP position in 2025.  
+            <br></br>  
+                  My research focuses on large language models (LLMs) and language production. I use behavioral, EEG, and fMRI data, along with computational methods, to explore the mechanisms of human language system. I also work on mechanistic interpretability aims to reverse-engineer the internal workings of LLM to understand how specific computations (e.g., syntax, prediction) are implemented. Additionally, I am trained and licensed in TMS for research purposes in Hong Kong and have completed an internship as a language therapist/researcher specializing in aphasia at the Third Affiliated Hospital of Sun Yat-sen University.  
+            <br></br>
+            <br></br>
+                  Email: xufeng.duan@link.cuhk.edu.hk<br></br>
+                  <a href="https://scholar.google.com/citations?user=W-MI5XUAAAAJ">Google scholar</a><br></br>
+     
+	          <hr class="w3-opacity">
  
-    </div>
+          </div>
   </div>
 	
 <!-- ======= Selected Research section ======= -->
