--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <div class="w3-content w3-justify" style="max-width:600px">
 	    
             <h4>Xufeng Duan</h4>  
-                  I am a Postdoctoral Fellow and Part-time Lecturer in the <a href="https://cuhklpl.github.io/">Language Processing Lab</a> at the Department of Linguistics, The Chinese University of Hong Kong (ranked among the top 50 in the QS rankings). I received my PhD in Linguistics from CUHK, and I am currently seeking a RAP/AP position in 2025.  
+                  I will be a Postdoctoral Fellow and Part-time Lecturer in the <a href="https://cuhklpl.github.io/">Language Processing Lab</a> at the Department of Linguistics, The Chinese University of Hong Kong (ranked among the top 50 in the QS rankings). I received my PhD in Linguistics from CUHK, and I am currently seeking a RAP/AP position in 2025.  
             <br></br>  
                   My research focuses on large language models (LLMs) and language production. I use behavioral, EEG, and fMRI data, along with computational methods, to explore the mechanisms of human language system. I also work on mechanistic interpretability, which aims to reverse-engineer the internal workings of LLMs to understand how specific computations (e.g., syntax, prediction) are implemented. Additionally, I am trained and licensed in TMS for research purposes in Hong Kong and have completed an internship as a language therapist/researcher specializing in aphasia at the Third Affiliated Hospital of Sun Yat-sen University.  
             <br></br>
