--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <img src="https://xufengduan.github.io/headshot_new.jpg" alt="Me" class="w3-image w3-padding-32" width="400" height="450">
           <div class="w3-content w3-justify" style="max-width:600px">
 	    
-            <h4>Xufeng Duan</h4>  
+            <h4>Xufeng Duan (段旭峰)</h4>  
                   I will be a Postdoctoral Fellow and Part-time Lecturer in the <a href="https://cuhklpl.github.io/">Language Processing Lab</a> at the Department of Linguistics, The Chinese University of Hong Kong (CUHK, ranked among the top 50). I received my PhD in Linguistics from CUHK, and I am currently seeking a RAP/AP position in 2025.  
             <br></br>  
                   My research focuses on large language models (LLMs) and language production. I use behavioral, EEG, and fMRI data, along with computational methods, to explore the mechanisms of human language system. I also work on mechanistic interpretability, which aims to reverse-engineer the internal workings of LLMs to understand how specific computations (e.g., syntax, prediction) are implemented. Additionally, I am trained and licensed in TMS for research purposes in Hong Kong and have completed an internship as a language therapist/researcher specializing in aphasia at the Third Affiliated Hospital of Sun Yat-sen University.  
