--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
     <div class="w3-content" style="max-width:800px">
       <h4><b>Publications</b></h4>
+	    <b>Duan, X.</b>, Yao, Z., Zhang, Y., Wang, S., & Cai, Z. G. (2025). How syntax specialization emerges in language models. <i>arXiv preprint</i>, arXiv:2505.19548. <a href="https://doi.org/10.48550/arXiv.2505.19548" target="_blank">10.48550/arXiv.2505.19548</a><br></br>
 	    Xiao, B., <b>Duan, X.</b>, Haslett, D. A., & Cai, Z. G. (in press). Human-likeness of LLMs in the Mental Lexicon. Conference on Computational Natural Language Learning.</a><br></br>
 	    Qiu, Z., <b>Duan, X.</b>, & Cai, Z. G. (2025). Grammaticality representation in ChatGPT as compared to linguists and laypeople. <i>Humanities and Social Sciences Communications</i>, 12(1), 1-15. <a href="https://doi.org/10.1057/s41599-025-04907-8" target="_blank">10.1057/s41599-025-04907-8</a><br></br>
 	    Wang, S., <b>Duan, X.</b>, & Cai, Z. (2025). What to predict? Exploring how sentence structure influences contrast predictions in humans and large language models. <i>In T. Kuribayashi, G. Rambelli, E. Takmaz, P. Wicke, J. Li, & B.-D. Oh (Eds.), Proceedings of the Workshop on Cognitive Modeling and Computational Linguistics</i> (pp. 244–252). NAACL 2025. <a href="https://aclanthology.org/2025.cmcl-1.28/" target="_blank">2025.cmcl-1.28</a><br></br>
