--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="https://xufengduan.github.io/avicon.png"  type="image/gif">
+  <link rel="icon" href="https://xufengduan.github.io/favicon.png"  type="image/gif">
     <title>Xufeng Duan</title>
 </head>
 <title>W3.CSS Template</title>
