--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <link rel="icon" href="https://xufengduan.github.io/favicon.png"  type="image/gif">
     <title>Xufeng Duan</title>
 </head>
+<head>
+	<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "rw6vh44tys");
+</script>
+</head>
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
