--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
       <div class="w3-content w3-justify" style="max-width:600px">
 
         <h4>Xufeng Duan (段旭峰)</h4>
-        I will be a Postdoctoral Fellow and Part-time Lecturer in the <a href="https://cuhklpl.github.io/">Language
-          Processing Lab</a> at the Department of Linguistics, The Chinese University of Hong Kong (CUHK). I received my
-        PhD in Linguistics from CUHK, and I am currently seeking a RAP/AP position in 2025.
+        I will be a Research Assitant Professor in the <a href="https://cuhklpl.github.io/">Language
+          Processing Lab</a> at <a href="https://bmi.cuhk.edu.hk/">Brain and Mind Institute</a>, The Chinese University
+        of Hong Kong (CUHK). I am currently seeking a AP position in 2026.
         <br></br>
         My research focuses on human language production and large language models (LLMs). I use behavioral, EEG, and
         fMRI data, along with computational methods, to explore the mechanisms of human language system. I also work on
