--- a/index.html
+++ b/index.html
@@ -190,6 +190,10 @@
         <b>Duan, X.</b>, Yao, Z., Zhang, Y., Wang, S., & Cai, Z. G. (2025). How syntax specialization emerges in
         language models. <i>arXiv preprint</i>, arXiv:2505.19548. <a href="https://doi.org/10.48550/arXiv.2505.19548"
           target="_blank">10.48550/arXiv.2505.19548</a><br></br>
+        Lin, Y., <b>Duan, X.</b>, Haslett, D., Chen, Y., & Cai, Z. G. (2025). Information Loss in LLMs' Multilingual
+        Translation: The Role of Training Data, Language Proximity, and Language Family. <i>arXiv preprint</i>,
+        arXiv:2506.23340. <a href="https://doi.org/10.48550/arXiv.2506.23340"
+          target="_blank">10.48550/arXiv.2506.23340</a><br></br>
         Xiao, B., <b>Duan, X.</b>, Haslett, D. A., & Cai, Z. G. (in press). Human-likeness of LLMs in the Mental
         Lexicon. Conference on Computational Natural Language Learning.</a><br></br>
         Qiu, Z., <b>Duan, X.</b>, & Cai, Z. G. (2025). Grammaticality representation in ChatGPT as compared to linguists
