--- a/index.html
+++ b/index.html
@@ -187,6 +187,11 @@
     <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
       <div class="w3-content" style="max-width:800px">
         <h4><b>Publications</b></h4>
+        Zhao, N., & <b>Duan, X.</b> (2025). Enhancing Conference Interpreting with Computer-assisted Interpreting Tools:
+        A Multi-agent System. <i>PsyArXiv preprint</i>. <a href="https://doi.org/10.31234/osf.io/pc3ht_v1"
+          target="_blank">10.31234/osf.io/pc3ht_v1</a><br></br>
+        Zhao, N., <b>Duan, X.</b>, & Cai, Z. G. (in press). The missing half of language learning in current
+        developmental language models: Exogenous and endogenous linguistic input. <i>Open Mind</i>.<br></br>
         <b>Duan, X.</b>, Yao, Z., Zhang, Y., Wang, S., & Cai, Z. G. (2025). How syntax specialization emerges in
         language models. <i>arXiv preprint</i>, arXiv:2505.19548. <a href="https://doi.org/10.48550/arXiv.2505.19548"
           target="_blank">10.48550/arXiv.2505.19548</a><br></br>
@@ -194,8 +199,10 @@
         Translation: The Role of Training Data, Language Proximity, and Language Family. <i>arXiv preprint</i>,
         arXiv:2506.23340. <a href="https://doi.org/10.48550/arXiv.2506.23340"
           target="_blank">10.48550/arXiv.2506.23340</a><br></br>
-        Xiao, B., <b>Duan, X.</b>, Haslett, D. A., & Cai, Z. G. (in press). Human-likeness of LLMs in the Mental
-        Lexicon. Conference on Computational Natural Language Learning.</a><br></br>
+        Xiao, B., <b>Duan, X.</b>, Haslett, D. A., & Cai, Z. G. (2025). Human-likeness of LLMs in the Mental
+        Lexicon. <i>Proceedings of the 29th Conference on Computational Natural Language Learning</i> (pp. 586–601).
+        Vienna, Austria: Association for Computational Linguistics. <a href="https://aclanthology.org/2025.conll-1.38/"
+          target="_blank">https://aclanthology.org/2025.conll-1.38/</a><br></br>
         Qiu, Z., <b>Duan, X.</b>, & Cai, Z. G. (2025). Grammaticality representation in ChatGPT as compared to linguists
         and laypeople. <i>Humanities and Social Sciences Communications</i>, 12(1), 1-15. <a
           href="https://doi.org/10.1057/s41599-025-04907-8" target="_blank">10.1057/s41599-025-04907-8</a><br></br>
