--- a/index.html
+++ b/index.html
@@ -228,9 +228,10 @@
         Linguistic Similarity in Large Language Models. <em>Proceedings of the 31st International Conference on
           Computational Linguistics (pp. 6866–6888). Association for Computational Linguistics.</em> <a
           href="https://aclanthology.org/2025.coling-main.459//">https://aclanthology.org/2025.coling-main.459/</a><br></br>
-        Tang, X., <b>Duan, X.</b>, & Cai, Z. G. (2024). Are LLMs Good Literature Review Writers? Evaluating the
-        Literature Review Writing Ability of Large Language Models. arXiv preprint arXiv:2412.13612. <a
-          href="https://doi.org/10.48550/arXiv.2412.13612 https://doi.org/10.48550/arXiv.2412.13612">doi:10.48550/arXiv:2412.13612</a><br></br>
+        Tang, X., <b>Duan, X.</b>, & Cai, Z. G. (2025). Large Language Models for Automated Literature Review: An
+        Evaluation of Reference Generation, Abstract Writing, and Review Composition. <i>In Proceedings of the 2025
+          Conference on Empirical Methods in Natural Language Processing (EMNLP), Main Conference.</i> <a
+          href="https://doi.org/10.48550/arXiv.2412.13612" target="_blank">arXiv:2412.13612</a><br></br>
         *Wang, S., <b>*Duan, X.</b>, & Cai, Z. (2024). A Multimodal Large Language Model "Foresees" Objects Based on
         Verb Information but Not Gender. In Proceedings of the 28th Conference on Computational Natural Language
         Learning (pp. 435-441). <a
@@ -359,8 +360,7 @@
         <i>Language therapist</i> The Third Affiliated Hospital of Sun Yat-sen University Jul.2017-Jul.2019 <br></br>
       </div>
     </div>
-
-    <div>Last updated 24/05/2025</div>
+    <div>Last updated 21/08/2025</div>
 
     <script>
       // Script to open and close sidebar
