--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <h3 class="w3-padding-64 w3-center"><b>Xufeng Duan</b></h3>
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
     <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a>
-    <a href="#selected" onclick="w3_close()" class="w3-bar-item w3-button">SELECTED RESEARCH</a>
+    <a href="#selected" onclick="w3_close()" class="w3-bar-item w3-button">CURATED RESEARCH</a>
     <a href="#publications" onclick="w3_close()" class="w3-bar-item w3-button">PUBLICATIONS</a>
     <a href="https://cdn.jsdelivr.net/gh/xufengduan/xufengduan.github.io/XufengDuan_CV.pdf" target="_blank"
       onclick="w3_close()" class="w3-bar-item w3-button">CV</a>
@@ -151,10 +151,10 @@
       </div>
     </div>
 
-    <!-- ======= Selected Research section ======= -->
+    <!-- ======= Curated Research section ======= -->
     <div class="w3-container w3-white w3-padding-32 w3-padding-large" id="selected">
       <div class="w3-content" style="max-width:800px">
-        <h4><b>Selected Research</b></h4>
+        <h4><b>Curated Research</b></h4>
 
         <div style="display: flex; align-items: top; gap: 20px; margin-top: 16px;">
           <img src="figures/neurons.png" alt="Neurons"
@@ -181,7 +181,7 @@
         </div>
       </div>
     </div>
-    <!-- ===== End Selected Research section ===== -->
+    <!-- ===== End Curated Research section ===== -->
 
     <!-- Publication section -->
     <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
