--- a/index.html
+++ b/index.html
@@ -187,6 +187,9 @@
     <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
       <div class="w3-content" style="max-width:800px">
         <h4><b>Publications</b></h4>
+        <b>Duan, X.</b>, Xiao, B., Kan, B., & Cai, Z. G. (2025). StimMAS: A Multi-Agent Framework for Automated
+        Linguistic Stimulus Construction in Psychological Research. <i>PsyArXiv preprint</i>. <a
+          href="https://doi.org/10.31234/osf.io/83zev_v1" target="_blank">10.31234/osf.io/83zev_v1</a><br></br>
         Tang, X., <b>Duan, X.</b>, & Cai, Z. G. (2025). Large Language Models for Automated Literature Review: An
         Evaluation of Reference Generation, Abstract Writing, and Review Composition. <i>In Proceedings of the 2025
           Conference on Empirical Methods in Natural Language Processing (EMNLP), Main Conference.</i> <a
@@ -360,7 +363,7 @@
         <i>Language therapist</i> The Third Affiliated Hospital of Sun Yat-sen University Jul.2017-Jul.2019 <br></br>
       </div>
     </div>
-    <div>Last updated 21/08/2025</div>
+    <div>Last updated 14/09/2025</div>
 
     <script>
       // Script to open and close sidebar
