--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
       onclick="w3_close()" class="w3-bar-item w3-button">CV</a>
     <a href="#presentations" onclick="w3_close()" class="w3-bar-item w3-button">CONFERENCE TALKS</a>
     <a href="#posters" onclick="w3_close()" class="w3-bar-item w3-button">POSTER PRESENTATIONS</a>
-    <a href="#projects" onclick="w3_close()" class="w3-bar-item w3-button">RESEARCH PROJECTS</a>
-    <a href="#scholarships" onclick="w3_close()" class="w3-bar-item w3-button">FUNDING AND AWARDS</a>
-    <a href="#training" onclick="w3_close()" class="w3-bar-item w3-button">TRAINING</a>
-    <a href="#funding" onclick="w3_close()" class="w3-bar-item w3-button">FUNDING</a>
+    <!-- <a href="#projects" onclick="w3_close()" class="w3-bar-item w3-button">RESEARCH PROJECTS</a> -->
+    <!-- <a href="#scholarships" onclick="w3_close()" class="w3-bar-item w3-button">FUNDING AND AWARDS</a> -->
+    <!-- <a href="#training" onclick="w3_close()" class="w3-bar-item w3-button">TRAINING</a> -->
+    <!-- <a href="#funding" onclick="w3_close()" class="w3-bar-item w3-button">FUNDING</a> -->
   </nav>
 
   <!-- Top menu on small screens -->
@@ -323,46 +323,46 @@
     </div>
 
     <!-- Project section -->
-    <div class="w3-container w3-white w3-padding-32 w3-padding-large" id="projects">
-      <div class="w3-content" style="max-width:800px">
-        <h4><b>Research Projects</b></h4>
-        <h5> Large language models for language research</h3>
-          - LLMs and Brain Alignment<br></br>
-          - Humanlikeness<br></br>
-          - LLMs' Interpretability <br></br>
+    <!-- <div class="w3-container w3-white w3-padding-32 w3-padding-large" id="projects"> -->
+    <div class="w3-content" style="max-width:800px">
+      <h4><b>Research Projects</b></h4>
+      <h5> Large language models for language research</h3>
+        - LLMs and Brain Alignment<br></br>
+        - Humanlikeness<br></br>
+        - LLMs' Interpretability <br></br>
 
-          <h5> Orthographic Processing in Chinese Handwriting</h3>
-            - Character amneisa: Behavior/EEG/fMRI study<br></br>
-            - Timecourse of Chinese handwriting: EEG study<br></br>
-      </div>
+        <h5> Orthographic Processing in Chinese Handwriting</h3>
+          - Character amneisa: Behavior/EEG/fMRI study<br></br>
+          - Timecourse of Chinese handwriting: EEG study<br></br>
     </div>
+    <!-- </div> -->
 
     <!-- Scholarships section -->
-    <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="scholarships">
-      <div class="w3-content" style="max-width:800px">
-        <h4><b>Awards and Scholarships</b></h4>
-        The Chinese university of Hong Kong Ph.D. Studentship <b>around 880,000 HKD</b>
-      </div>
+    <!-- <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="scholarships"> -->
+    <div class="w3-content" style="max-width:800px">
+      <h4><b>Awards and Scholarships</b></h4>
+      The Chinese university of Hong Kong Ph.D. Studentship <b>around 880,000 HKD</b>
     </div>
+    <!-- </div> -->
 
     <!-- Funding section -->
-    <div class="w3-container w3-white w3-padding-32 w3-padding-large" id="funding">
-      <div class="w3-content" style="max-width:800px">
-        <h4><b>Research Funding</b></h4>
-        Key Laboratory Open Fund for student(2019), <b>30,000 RMB</b> <i> Multimodal(EEG/fNIRs/Eyetrakcing) Corpus for
-          Special Population</i>. Sun Yat-sen University.
-      </div>
+    <!-- <div class="w3-container w3-white w3-padding-32 w3-padding-large" id="funding"> -->
+    <div class="w3-content" style="max-width:800px">
+      <h4><b>Research Funding</b></h4>
+      Key Laboratory Open Fund for student(2019), <b>30,000 RMB</b> <i> Multimodal(EEG/fNIRs/Eyetrakcing) Corpus for
+        Special Population</i>. Sun Yat-sen University.
     </div>
+    <!-- </div> -->
 
 
     <!-- Training section -->
-    <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="training">
-      <div class="w3-content" style="max-width:800px">
-        <h4><b>Training/Intership</b></h4>
-        <i>TMS training</i> APAC TMS clinic Workshop, University of Numnich & MagMore Company May.2023 <br></br>
-        <i>Language therapist</i> The Third Affiliated Hospital of Sun Yat-sen University Jul.2017-Jul.2019 <br></br>
-      </div>
+    <!-- <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="training"> -->
+    <div class="w3-content" style="max-width:800px">
+      <h4><b>Training/Intership</b></h4>
+      <i>TMS training</i> APAC TMS clinic Workshop, University of Numnich & MagMore Company May.2023 <br></br>
+      <i>Language therapist</i> The Third Affiliated Hospital of Sun Yat-sen University Jul.2017-Jul.2019 <br></br>
     </div>
+    <!-- </div> -->
     <div>Last updated 14/09/2025</div>
 
     <script>
