--- a/index.html
+++ b/index.html
@@ -187,82 +187,14 @@
     <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="publications">
       <div class="w3-content" style="max-width:800px">
         <h4><b>Publications</b></h4>
-        <b>Duan, X.</b>, Xiao, B., Kan, B., & Cai, Z. G. (2025). StimMAS: A Multi-Agent Framework for Automated
-        Linguistic Stimulus Construction in Psychological Research. <i>PsyArXiv preprint</i>. <a
-          href="https://doi.org/10.31234/osf.io/83zev_v1" target="_blank">10.31234/osf.io/83zev_v1</a><br></br>
-        Tang, X., <b>Duan, X.</b>, & Cai, Z. G. (2025). Large Language Models for Automated Literature Review: An
-        Evaluation of Reference Generation, Abstract Writing, and Review Composition. <i>In Proceedings of the 2025
-          Conference on Empirical Methods in Natural Language Processing (EMNLP), Main Conference.</i> <a
-          href="https://doi.org/10.48550/arXiv.2412.13612" target="_blank">arXiv:2412.13612</a><br></br>
-        Zhao, N., & <b>Duan, X.</b> (2025). Enhancing Conference Interpreting with Computer-assisted Interpreting Tools:
-        A Multi-agent System. <i>PsyArXiv preprint</i>. <a href="https://doi.org/10.31234/osf.io/pc3ht_v1"
-          target="_blank">10.31234/osf.io/pc3ht_v1</a><br></br>
-        Zhao, N., <b>Duan, X.</b>, & Cai, Z. G. (in press). The missing half of language learning in current
-        developmental language models: Exogenous and endogenous linguistic input. <i>Open Mind</i>.<br></br>
-        <b>Duan, X.</b>, Yao, Z., Zhang, Y., Wang, S., & Cai, Z. G. (2025). How syntax specialization emerges in
-        language models. <i>arXiv preprint</i>, arXiv:2505.19548. <a href="https://doi.org/10.48550/arXiv.2505.19548"
-          target="_blank">10.48550/arXiv.2505.19548</a><br></br>
-        Lin, Y., <b>Duan, X.</b>, Haslett, D., Chen, Y., & Cai, Z. G. (2025). Information Loss in LLMs' Multilingual
-        Translation: The Role of Training Data, Language Proximity, and Language Family. <i>arXiv preprint</i>,
-        arXiv:2506.23340. <a href="https://doi.org/10.48550/arXiv.2506.23340"
-          target="_blank">10.48550/arXiv.2506.23340</a><br></br>
-        Xiao, B., <b>Duan, X.</b>, Haslett, D. A., & Cai, Z. G. (2025). Human-likeness of LLMs in the Mental
-        Lexicon. <i>Proceedings of the 29th Conference on Computational Natural Language Learning</i> (pp. 586–601).
-        Vienna, Austria: Association for Computational Linguistics. <a href="https://aclanthology.org/2025.conll-1.38/"
-          target="_blank">https://aclanthology.org/2025.conll-1.38/</a><br></br>
-        Qiu, Z., <b>Duan, X.</b>, & Cai, Z. G. (2025). Grammaticality representation in ChatGPT as compared to linguists
-        and laypeople. <i>Humanities and Social Sciences Communications</i>, 12(1), 1-15. <a
-          href="https://doi.org/10.1057/s41599-025-04907-8" target="_blank">10.1057/s41599-025-04907-8</a><br></br>
-        Wang, S., <b>Duan, X.</b>, & Cai, Z. (2025). What to predict? Exploring how sentence structure influences
-        contrast predictions in humans and large language models. <i>In T. Kuribayashi, G. Rambelli, E. Takmaz, P.
-          Wicke, J. Li, & B.-D. Oh (Eds.), Proceedings of the Workshop on Cognitive Modeling and Computational
-          Linguistics</i> (pp. 244–252). NAACL 2025. <a href="https://aclanthology.org/2025.cmcl-1.28/"
-          target="_blank">2025.cmcl-1.28</a><br></br>
-        Wu, H., <b>Duan, X.</b>, & Cai, Z. (2025). Distinct social-linguistic processing between humans and large
-        audio-language models: Evidence from model-brain alignment. <i>In T. Kuribayashi, G. Rambelli, E. Takmaz, P.
-          Wicke, J. Li, & B.-D. Oh (Eds.), Proceedings of the Workshop on Cognitive Modeling and Computational
-          Linguistics</i> (pp. 135–143). NAACL 2025. <a href="https://aclanthology.org/2025.cmcl-1.18/"
-          target="_blank">2025.cmcl-1.18</a><br></br>
-        <b>Duan, X.</b>, Li, S., & Cai, Z. G. (2025). MacBehaviour: An R package for behavioural experimentation on
-        large language models. <i>Behavior Research Methods</i>s, 57(1), 19. <a
-          href=" https://doi.org/10.3758/s13428-024-02524-y">doi:10.3758/s13428-024-02524-y</a><br></br>
-        <b>Duan, X.</b>, Zhou, X., Xiao, B., & Cai, Z. (2025). Unveiling language competence neurons: A psycholinguistic
-        approach to model interpretability. In O. Rambow, L. Wanner, M. Apidianaki, H. Al-Khalifa, B. D. Eugenio, & S.
-        Schockaert (Eds.), <em>Proceedings of the 31st International Conference on Computational Linguistics (pp.
-          10148–10157). Association for Computational Linguistics. </em><a
-          href="https://aclanthology.org/2025.coling-main.677/">https://aclanthology.org/2025.coling-main.677/</a><br></br>
-        Zhou, X., Chen, D., Cahyawijaya, S., <b>Duan, X.</b>, & Cai, Z. G. (2025). Linguistic Minimal Pairs Elicit
-        Linguistic Similarity in Large Language Models. <em>Proceedings of the 31st International Conference on
-          Computational Linguistics (pp. 6866–6888). Association for Computational Linguistics.</em> <a
-          href="https://aclanthology.org/2025.coling-main.459//">https://aclanthology.org/2025.coling-main.459/</a><br></br>
-        *Wang, S., <b>*Duan, X.</b>, & Cai, Z. (2024). A Multimodal Large Language Model "Foresees" Objects Based on
-        Verb Information but Not Gender. In Proceedings of the 28th Conference on Computational Natural Language
-        Learning (pp. 435-441). <a
-          href="https://doi.org/10.18653/v1/2024.conll-1.32">doi:10.18653/v1/2024.conll-1.32</a><br></br>
-        Qiu, Z., <b>Duan, X.</b>, & Cai, Z. (2024). Evaluating Grammatical Well-Formedness in Large Language Models: A
-        Comparative Study with Human Judgments. In Proceedings of the Workshop on Cognitive Modeling and Computational
-        Linguistics (pp. 189-198). <a
-          href="https://doi.org/10.18653/v1/2024.cmcl-1.16">10.18653/v1/2024.cmcl-1.16</a><br></br>
-        <b>Duan, X.</b>, Xiao, B., Tang, X., & Cai, Z. G. (2024). HLB: Benchmarking LLMs' Humanlikeness in Language Use.
-        <i>arXiv:2409.15890 [cs.CL]</i>. <a
-          href="https://doi.org/10.48550/arXiv.2409.15890">doi:10.48550/arXiv.2409.15890</a><br></br>
-        <b>Duan, X.</b>, & Cai, Z. G. (2024). Chinese Character Processing. <i>Oxford Research Encyclopedia of
-          Linguistics</i>. Oxford University Press. <a
-          href="https://doi.org/10.1093/acrefore/9780199384655.013.1012">doi: 9780199384655.013.1012.</a><br></br>
-        H. Wu, <b>Duan, X.</b>, Cai, Z. G.(2024). Speaker Demographics Modulate Listeners' Neural Correlates of Spoken
-        Word Processing. <i>Journal of Cognitive Neuroscience</i> 2024; 36 (10): 2208–2226.<a
-          href="https://doi.org/10.1162/jocn_a_02225"> doi: 10.1162/jocn_a_02225</a><br></br>
-        Cai, Z., <b>Duan, X.</b>, Haslett, D., Wang, S., & Pickering, M. (2024). Do large language models resemble
-        humans in language use?. In <i>Proceedings of the Workshop on Cognitive Modeling and Computational
-          Linguistics</i> (pp. 37-56).<a href="https://doi.org/10.18653/v1/2024.cmcl-1.4">
-          doi:10.18653/v1/2024.cmcl-1.4</a><br></br>
-        Qiu, Z., <b>Duan, X.</b>, & Cai, Z. (2023). Does ChatGPT Resemble Humans in Processing Implicatures?. In
-        Proceedings of the 4th Natural Logic Meets Machine Learning Workshop (pp. 25-34)<a
-          href="https://aclanthology.org/2023.naloma-1.3">https://aclanthology.org/2023.naloma-1.3</a><br></br>
-        Lu, S., <b>Duan, X.</b> & Li X.(2021). Prominence and Locality Principle in Chinese Possessive Topicalization
-        Sentences and its Psychological Basis——Evidence from eye-movements. <i> Contemporary Linguistics</i> 23(1):
-        56-73</i> <a
-          href=https://www.dropbox.com/scl/fi/4ga7a5ssslaed72hx3i2v/Prominence-and-Locality-Principle-in-Chinese-Possessive-Topicalization-Sentences.pdf?rlkey=7rtvpqolr2xs6rtlychdtatwb&st=672mpgkb&dl=0>[pdf]</a><br></br>
+        <p style="color: #666; font-size: 0.9em; margin-bottom: 16px;">
+          Total: <span id="publication-count">Loading...</span> publications •
+          <span style="font-style: italic;">Auto-generated from bibliography</span>
+        </p>
+        <!-- Publications will be dynamically loaded here -->
+        <div id="publication-list">
+          <p style="color: #888;">Loading publications...</p>
+        </div>
       </div>
     </div>
 
@@ -371,7 +303,7 @@
       </div>
     -->
     <!-- </div> -->
-    <div>Last updated 19/10/2025</div>
+    <div>Last updated 15/01/2026</div>
 
     <script>
       // Script to open and close sidebar
@@ -395,6 +327,8 @@
 
     </script>
 
+    <!-- Publication auto-loader -->
+    <script src="publication-loader.js"></script>
 
 </body>
 
