--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div class="w3-content w3-justify" style="max-width:600px">
 
         <h4>Xufeng Duan (段旭峰)</h4>
-        I am a Research Assitant Professor in the <a href="https://cuhklpl.github.io/">Language
+        I am a Research Assistant Professor in the <a href="https://cuhklpl.github.io/">Language
           Processing Lab</a> at <a href="https://bmi.cuhk.edu.hk/">Brain and Mind Institute</a>, The Chinese University
         of Hong Kong (CUHK). I am currently seeking a AP position in 2026.
         <br></br>
